--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.0"
+    "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
